
	* Support different NICK sent by client in replication.

	* Make repl_* work when NICK sent by client differs from current NICK.

	* Support mIRC and ksirc.

	* Fix bug with setting PRIVATE too often.

	* Fix issue with NickServ IDENTIFY'ing when connecting to server.
	
	* Fix problems with incorrectly added colons.

  INTERNALS

	* Reduce number of files generated by configure.

	* Moved source control system to Bazaar (http://www.bazaar-vcs.org/)

	* Use separate include files rather than one large one.

	* Get rid of complicated filter class system.

	* Several modules have been integrated into the ControlProxy binary 
	  to avoid (engineering) overhead.

	* There now is a testsuite that tests some of the internal functions.

	* Add 'debug' module for easier debugging.

  NEW FEATURES

	* Removed dependency on popt and libxml.

    * Enhance custom_log (Alexander Wild).

	* Add support for %B, %e and %Y in log_custom (Korbinian Rosenegger)

	* Support CONNECT proxy command as used by irssi

	* Use new CtrlProxy-specific logging system. 
	  Logs go to ~/.ctrlproxy/log by default now when in daemon mode.

	* nickserv is now "self-learning".

	* Add socks module to allow connecting using SOCKS.

	* Install default configuration that is used when the user 
	  does not have a local configuration.

	* Support autogenerating a configuration using `ctrlproxy --init'.

	* Uses GNUTLS now rather than OpenSSL.

	* Remove linestack_memory and make linestack_file the default.

	* Admin module can now also work as a seperate ('virtual') network.

	* Make reconnect_timeout changeable (Alexander Wild)

	* Add inetd-style client support.

	* Support non-blocking connects. (Daniel Poelzleithner)

	* Parse 005 line sent by server for PREFIX, CHANTYPES, NETWORK.

	* Add ability to change NICK when away.

	* Add help support in admin module (Daniel Poelzleithner).

	* Allows connecting to networks on ~/.ctrlproxy/socket using 
	  unix domain sockets.

	* Write out PID file.