@@ -1,10 +1,11 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
-includedir=@DESTINCLUDEDIR@
+includedir=@includedir@
+ctrlincludedir=${includedir}/ctrlproxy-3.0
 
 Name: ctrlproxy
 Description: Flexible IRC proxy
 Version: @PACKAGE_VERSION@
 Libs: @LIBS@ @COMMON_LIBS@
-Cflags: -I${includedir} @COMMON_CFLAGS@
+Cflags: -I${ctrlincludedir} @COMMON_CFLAGS@
