@@ -41,6 +41,7 @@
 #include <sys/stat.h>
 #include <fcntl.h>
 #include "ctrlproxy.h"
+#include "plugins.h"
 
 #define DEFAULT_RECONNECT_INTERVAL 60
 #define MAXHOSTNAMELEN 4096
